# PassKeeper

./: .gdbinit.example  .gitignore  .secret.db.example  .swp  CMakeLists.txt  PassKeeper.cpp  README.md  TODO  brtool  build-penguin  build-window  command.example  config.h.in  coverage_report  format-quote  make_openssl  make_sqlcipher  make_sqlite  make_sqlite3  project-config.h  project.info  remote.info.example  run_build
Command/: ArgumentsParser.cpp  ArgumentsParser.h
PassKeeper/: CMakeLists.txt  PassKeeper.cpp
PassKeeper/Command/: ArgumentsParser.cpp  ArgumentsParser.h
PassKeeper/Persistence/: Database.cpp  Database.h
Persistence/: Database.cpp  Database.h
StartupScript/: adjust-layout  chrome.sh  discord.sh  start-apps  terminal.sh  youtube-music.sh
Util/: Validation.cpp  Validation.h
brtool-src/: depstat  make_openssl  make_sqlcipher  uihandle  util
brtool-src/command/: build  clean  doc  help  rdc  scp  setup  ssh  test
cmake/: BuildCompat.cmake  CompilerFlags.cmake  FeatureTest.cmake  FeatureTests.cmake  FindCheck.cmake  FindLibBSD.cmake  FindOpenSSL.cmake  FindSQLite3.cmake  FindSqlCipher.cmake  GCC.cmake  MinGW-w64.cmake  TestTargets.cmake  config.h.in  penguin-toolchain.cmake  projcfg.h.in  project-config.h  window-toolchain.cmake
docs/: Makefile  pk-create.adoc  pk-init.adoc  pk-init.txt  pk.adoc
include/: command.hpp  orm.hpp  pch.hpp  pkerr.hpp
src/: CMakeLists.txt  MEMO  README  algorithm.h  appinfo.c  appinfo.h  atexit-chain.c  atexit-chain.h  cipher-config.c  cipher-config.h  cli.c  cli.h  cmdparser.c  cmdparser.h  command.c  command.h  command_parser.c  command_parser.h  compact.h  compat-util.h  compat.c  compat.h  credky.c  credky.h  datastore.c  datastore.h  debug.c  debug.h  encrypt.c  encrypt.h  enval.c  enval.h  environment.c  environment.h  errhandler.c  errhandler.h  exteditor.c  exteditor.h  file.c  file.h  (+63 more)
src/command/: README  count.c  create.c  create.cpp  delete.c  delete.cpp  help.c  init.c  makekey.c  read.c  read.cpp  reset.c  update.c  update.cpp  version.c
src/compat/: README  dirname.c  getline.c  poll.c  poll.h  setenv.c  strchrnul.c  strdup.c  strndup.c  strnlen.c  time-zone.c  unsetenv.c  zeromem.c
src/compat/uni/: datebias.c  filesys.c  pkproc.c  security.c  time-zone.c
src/compat/win/: datebias.c  pkproc.c  security.c  time-zone.c  usage.c  wrapper.c
src/uni/: time-zone.c
test/: CMakeLists.txt  README  helper.h  main.c  t1000-parse-pathname.t  t1000-pk_dirname.t  t1000-pk_dirname_main.c  t1010-binhex-convert.t  t1010-binhex-convert_main.c  t1100-binhex-convert.t  t1100-binhex-convert_main.c  t1200-parse-pathname.t  t2000-help-message.t  t2020-make-key.t  t2030-init-option-encrypt.t  t2100-version-message.t  t3000-init-option_encrypt.t  t3001-init-option_other.t  t4000-help-message.t  t4100-version-message.t  t5000-make-key.t  test-lib  test_cli.c  test_cli.h  test_cmdparser.c  test_debug.c  test_debug.h  test_encryption.c  test_fileio.c  test_io.c  test_parse_command.h  test_stringbuffer.c  test_strutil.c  test_utility.c  test_utility.h
tool/: coverage_report  depstat  make_freetype  make_openssl  make_sqlcipher  report_coverage  uihandle  util
tool/command/: build  clean  doc  help  ssh  test
